# InertYTbotV2.2

./: .env.example  .gitignore  .replit  COOKIES_SETUP.md  DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY_NOTICE.md  UPTIMEROBOT_SETUP.md  bot.py  config.py  cookies.txt  database.py  downloader.py  file_splitter.py  inert_bot.db  inert_downloader_bot.session  inert_downloader_bot.session-journal  keep_alive.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  utils.py  web_preview.py
