[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "flask>=3.1.2",
    "pillow>=12.0.0",
    "pymongo>=4.15.3",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.2.1",
    "tgcrypto>=1.2.5",
    "yt-dlp>=2025.10.22",
]
